--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -685,7 +685,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eMh-jf-Tma" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="366.5" y="3090"/>
+            <point key="canvasLocation" x="372.5" y="3090"/>
         </scene>
         <!--Conversation View Controller-->
         <scene sceneID="9Wr-pj-gUK">
@@ -709,7 +709,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3a-sc-A4a" userLabel="Navigation Bar">
                                 <rect key="frame" x="0.0" y="20" width="375" height="70"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
                                         <rect key="frame" x="123" y="10" width="131" height="50"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uD7-V4-mF6" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
@@ -962,7 +962,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1030" y="2874"/>
+            <point key="canvasLocation" x="1030.5" y="3090"/>
         </scene>
         <!--Me-->
         <scene sceneID="GiO-5i-rfP">
@@ -1175,60 +1175,6 @@
             </objects>
             <point key="canvasLocation" x="-273" y="2032"/>
         </scene>
-        <!--Auth Web View Controller-->
-        <scene sceneID="3kj-NN-7Ln">
-            <objects>
-                <viewController storyboardIdentifier="AuthWeb" id="pWM-p3-qQw" customClass="AuthWebViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="64N-fY-kiD"/>
-                        <viewControllerLayoutGuide type="bottom" id="xkE-wF-jrA"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="I6g-NZ-ZYA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="45D-IS-tEC">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <color key="barTintColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
-                                <items>
-                                    <navigationItem title="Instagram" id="bgK-mN-r8z">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="N7Z-pL-Wy9">
-                                            <color key="tintColor" red="0.61960784310000006" green="0.4941176471" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <connections>
-                                                <action selector="cancelAuth:" destination="pWM-p3-qQw" id="6l0-Qb-Tff"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6ff-bM-c0K">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <outlet property="delegate" destination="pWM-p3-qQw" id="A9N-75-5UR"/>
-                                </connections>
-                            </webView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="45D-IS-tEC" secondAttribute="trailing" id="7ZX-5p-03m"/>
-                            <constraint firstAttribute="trailing" secondItem="6ff-bM-c0K" secondAttribute="trailing" id="D4X-tE-9AE"/>
-                            <constraint firstItem="xkE-wF-jrA" firstAttribute="top" secondItem="6ff-bM-c0K" secondAttribute="bottom" id="bUh-XB-gZY"/>
-                            <constraint firstItem="45D-IS-tEC" firstAttribute="leading" secondItem="I6g-NZ-ZYA" secondAttribute="leading" id="cYZ-U6-PBz"/>
-                            <constraint firstItem="6ff-bM-c0K" firstAttribute="leading" secondItem="I6g-NZ-ZYA" secondAttribute="leading" id="kAW-OL-CX8"/>
-                            <constraint firstItem="6ff-bM-c0K" firstAttribute="top" secondItem="45D-IS-tEC" secondAttribute="bottom" id="pfY-Fn-8kx"/>
-                            <constraint firstItem="45D-IS-tEC" firstAttribute="top" secondItem="64N-fY-kiD" secondAttribute="bottom" id="zau-eq-hCn"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="navBar" destination="45D-IS-tEC" id="c0W-uP-T3c"/>
-                        <outlet property="webView" destination="6ff-bM-c0K" id="DN7-2D-MjA"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yMQ-J3-bWX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-273" y="2890"/>
-        </scene>
         <!--Onboarding - Login-->
         <scene sceneID="IJI-Me-SMT">
             <objects>
@@ -1279,8 +1225,8 @@
         <image name="sample-taylor-video-frame" width="375" height="375"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fwv-Pj-RXP"/>
-        <segue reference="5l2-qW-Xr9"/>
         <segue reference="tQ4-cK-7eW"/>
+        <segue reference="5l2-qW-Xr9"/>
+        <segue reference="Gd9-HM-lnj"/>
     </inferredMetricsTieBreakers>
 </document>
