Getting rid of Conversation CollectionView datasource bond in order to have more fine-grained control of when messages reload

--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -892,6 +892,7 @@
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
+                                    <outlet property="dataSource" destination="kBv-HD-oBL" id="WH1-zg-lRZ"/>
                                     <outlet property="delegate" destination="kBv-HD-oBL" id="4Aq-Md-deY"/>
                                 </connections>
                             </collectionView>
